<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Informacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Introduccion"
                android:textColor="@color/Blanco"
                android:textSize="18sp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="1dp"
                android:text="@string/induccion1"
                android:textColor="@color/Blanco" />

            <TextView
                android:id="@+id/text1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/induccion2"
                android:textColor="@color/Blanco" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/onda"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/onda2"
                android:textColor="@color/Blanco" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="333.33dp"
                android:layout_height="333.33dp"
                android:layout_gravity="center"
                android:contentDescription="@string/Imagen1"
                app:srcCompat="@drawable/ecg_wave" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura2"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura3"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text5.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura3_1"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura4"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura5"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura6"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/lectura6_1"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TableRow
                    android:layout_width="341dp"
                    android:layout_height="7dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:text="@string/columna1"
                        android:textColor="@color/Blanco" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:text="@string/columna2"
                        android:textColor="@color/Blanco" />
                </TableRow>

                <TableRow
                    android:layout_width="223dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila2"
                        android:textColor="@color/Blanco" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila2_1"
                        android:textColor="@color/Blanco" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:text="@string/fila3"
                        android:textColor="@color/Blanco" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="79dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila3_1"
                        android:textColor="@color/Blanco" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila4"
                        android:textColor="@color/Blanco" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila4_1"
                        android:textColor="@color/Blanco" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila5"
                        android:textColor="@color/Blanco" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/stylo_borde"
                        android:gravity="center"
                        android:text="@string/fila5_1"
                        android:textColor="@color/Blanco" />
                </TableRow>


            </TableLayout>

            <TextView
                android:id="@+id/text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lectura7"
                android:textColor="@color/Blanco"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>