<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Grafica">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/txt_1"
                android:textColor="@color/Blanco"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/titulo_pulsos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="@string/titulo3"
                        android:textColor="@color/Blanco"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_Pulsos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/txt_3"
                        android:textColor="#DA0404"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/titulo_rc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="@string/titulo7"
                        android:textColor="@color/Blanco"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_RC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/txt_6"
                        android:textColor="@color/Blanco"
                        android:textSize="18sp" />

                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btn_Graficar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="BtnGraficar"
                android:text="@string/tboton" />


            <com.jjoe64.graphview.GraphView
                android:id="@+id/grafica"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="10dp"
                android:background="@color/Blanco"
                android:clickable="false"
                android:gravity="center" />


            <TextView
                android:id="@+id/tv_Temporizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_4"
                android:textColor="@color/BlancoTransparente"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_Temporizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="BtnContarPulsos"
                android:text="@string/txt_btn" />

            <Button
                android:id="@+id/btn_ResetTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="BtnResetTempo"
                android:text="@string/txt_btnReset"
                android:visibility="invisible"
                tools:visibility="visible" />

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="GuardarPDF"
                android:text="@string/BotonCSV"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>